--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^7.1.6",
     "material-components-web": "^0.24.0",
-    "materialize-css": "^0.100.2"
+    "materialize-css": "^0.100.2",
+    "postcss-cli": "^4.1.1"
   },
   "devDependencies": {
     "node-sass": "^4.6.0",
